<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <!-- Menu title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/menu_text"
        android:textSize="35sp" />

    <!-- Language selection button -->
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/lang_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lang"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:icon="@drawable/lang_icon"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        />

    <!-- Seat selection button -->
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/num_of_seats_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_of_seats_text"
        android:textSize="11sp"
        android:textColor="@color/black"
        app:icon="@drawable/chair_icon"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        />

    <!-- Payment method selection button -->
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/payment_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_method_text"
        android:textSize="11sp"
        android:textColor="@color/black"
        app:icon="@drawable/payment_icon"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        />

    <!-- Time select button -->
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/time_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_text"
        android:textSize="11sp"
        android:textColor="@color/black"
        app:icon="@drawable/time_icon"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        />

    <!-- Vegan selection button -->
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/vegan_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vegan_text"
        android:textSize="11sp"
        android:textColor="@color/black"
        app:icon="@drawable/vegan_icon"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        />



    <!-- Reserve seats button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/reserve_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/pink_rounded_btn"
        android:gravity="center"
        android:text="@string/reserve_btn_text"
        android:textSize="15sp" />


</LinearLayout>