<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="10dp">

    <!-- Menu title -->
    <TextView
        android:id="@+id/menuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:text="@string/menu_text"
        android:textSize="35sp"
        android:layout_marginTop="16dp"/>


    <!-- Language selection button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/languageButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lang"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:icon="@drawable/lang_icon"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="@id/menuTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Reserve seats button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/reserveSeatsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/pink_rounded_btn"
        android:text="@string/reserve_btn_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_marginBottom="16dp" />

    <!-- Seat selection button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/numOfSeatsButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/num_of_seats_text"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:icon="@drawable/chair_icon"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toStartOf="@id/paymentButton"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/reserveSeatsButton" />

    <!-- Payment method selection button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/paymentButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/payment_method_text"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:icon="@drawable/payment_icon"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toStartOf="@id/timeButton"
        app:layout_constraintStart_toEndOf="@id/numOfSeatsButton"
        app:layout_constraintTop_toTopOf="@id/reserveSeatsButton" />

    <!-- Time select button -->
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/timeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/time_text"
        android:textSize="11sp"
        android:textColor="@color/black"
        app:icon="@drawable/time_icon"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        app:layout_constraintTop_toTopOf="@id/reserveSeatsButton"
        app:layout_constraintEnd_toStartOf="@id/veganButton"
        app:layout_constraintStart_toEndOf="@id/paymentButton"
        />

    <!-- Vegan selection button -->
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/veganButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/vegan_text"
        android:textSize="11sp"
        android:textColor="@color/black"
        app:icon="@drawable/vegan_icon"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        app:layout_constraintTop_toTopOf="@id/reserveSeatsButton"
        app:layout_constraintStart_toEndOf="@id/timeButton"
        />


</androidx.constraintlayout.widget.ConstraintLayout>